--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-	
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+:root {
+    --color-bg-primary: #002C77;
+    --color-bg-secondary: #255B97;
+    --color-bg-tatary: #E0F4FB;
+
+    --color-bg-btn-primary: #255B97;
+    --color-bg-btn-secondary: #111827;
+
+    --color-text-primary:#002C77;
+    --color-text-secondary: #255B97;
+}
