--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,4 +17,14 @@
     --color-text-primary:#002C77;
     --color-text-secondary: #255B97;
     --color-text-tatary: #1F2937;
+    --color-text-base: #000000;
+    --color-text-sebase: #25282A;
+    --color-text-trbase: #464547;
+
+    --font-size-h1:42px;
+    --font-size-h2:33px;
+    --font-size-h3:24px;
+    --font-size-h4:20px;
+    --font-size-h5:16px;
+    --font-size-h6:12px;
 }
