add font size in home page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,7 @@
     --color-text-primary:#002C77;
     --color-text-secondary: #255B97;
     --color-text-tatary: #1F2937;
-    --color-text-base: #000000;
+    --color-text-pbase: #000000;
     --color-text-sebase: #25282A;
     --color-text-trbase: #464547;
 
