--- a/pwit/templates/pages/Result.html
+++ b/pwit/templates/pages/Result.html
@@ -19,15 +19,15 @@
         </thead>
         <tbody>
             {% if doc %}
-                {% for key, value in doc.items() %}
+                {% for item in doc %}
                     <tr style="border-bottom: 1px solid #ccc;">
                         <td style="width: 50%; padding: 8px; font-family: Arial, sans-serif; font-size: 16px; color: #000; border: 1px solid #ccc;">
-                            {{ key }}
+                            {{ item.name }}
                         </td>
                         <td style="padding: 8px; border: 1px solid #ccc;">
                             <div style="height: 16px; background-color: #E0E0E0; border-radius: 4px; overflow: hidden;">
-                                <div style="height: 100%;  background-color: #4CAF50; text-align: center; color: #fff; font-size: 12px;">
-                                    
+                                <div style="height: 100%; width: {{ item.width }}; background-color: {{ item.color }}; text-align: center; color: #fff; font-size: 12px;">
+                                {{item.value}}
                                 </div>
                             </div>
                         </td>
