template ui matching

--- a/pwit/templates/pages/Result.html
+++ b/pwit/templates/pages/Result.html
@@ -88,11 +88,11 @@
         </div>
         <!-- chart -->
         <div style="padding-top: 25px;">
-            <div style="border: 1px solid #D0D1D3; padding: 10px;">
-                <h4 style="color: #002C77;font-family: serif; font-weight: 700;">
-                    Results and Recommendations
-                </h4>
-                <p style="font-size: 12px;">
+            <div >
+                <p style="font-size: 24px; color: #002C77;font-family: serif; font-weight: 700;">
+                    {{doc.main_title}}
+                </p>
+                <p style="font-size: 20px; padding: 10px 0px;">
                     <span style="font-weight: 500;">Average: </span>
                     <span style="font-weight: 700;color: #27853F;">{{ doc.average or 0 }}</span>
                 </p>
