show image in mail temlate

--- a/pwit/templates/pages/forget_email_template.html
+++ b/pwit/templates/pages/forget_email_template.html
@@ -75,7 +75,7 @@
 <body>
     <div class="center-container"> <!-- HEADER -->
         <div class="header">
-            <img src='{{link}}/assets/pwit/images/navbar.png' alt="PWIT Logo" style="width: 150px; height: auto;" />
+            <img src='{{link}}/files/logo.png' alt="PWIT Logo" style="width: 150px; height: auto;" />
            <div
                 style="font-size: 14px; font-weight: 500; line-height: 15px; color:#002C77;font-weight:600;padding-top:7px">
                 Assistive Funder Toolkit</div>
@@ -117,23 +117,23 @@
                     <div style="text-align: center; margin-bottom: 10px;">
                         <a href="https://www.youtube.com/user/TheBridgespanGroup" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/yt.png' alt="YouTube" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='{{link}}/files/yt.svg' alt="YouTube" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                         <a href="https://www.facebook.com/BridgespanGroup/" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/fb.png' alt="Facebook" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='{{link}}/files/fb.svg' alt="Facebook" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                         <a href="https://twitter.com/BridgespanGroup" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/tw.png' alt="Twitter" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='{{link}}/files/tw.svg' alt="Twitter" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                         <a href="https://www.instagram.com/thebridgespangroup/" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/ins.png' alt="Instagram" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='{{link}}/files/ins.svg' alt="Instagram" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                         <a href="https://www.linkedin.com/company/the-bridgespan-group" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/li.png' alt="LinkedIn" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='{{link}}/files/li.svg' alt="LinkedIn" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                     </div>
 
