change info icon and text

--- a/pwit/templates/pages/welcome_email_template.html
+++ b/pwit/templates/pages/welcome_email_template.html
@@ -79,7 +79,7 @@
             <div
                 style="font-size: 14px; font-weight: 500; line-height: 15px; color:#002C77;font-weight:600;padding-top:7px">
                 Assistive Funder Toolkit</div>
-            <div style="font-size: 12px; font-weight: 400;">(Developed under the Pay-What-It-Takes India Initiative)
+            <div style="font-size: 12px; font-weight: 400;">(Developed by the Pay-What-It-Takes India Initiative)
             </div>
         </div> <!-- BODY -->
         <div class="card"> <!-- Head -->
