change logo url

--- a/pwit/templates/pages/welcome_email_template.html
+++ b/pwit/templates/pages/welcome_email_template.html
@@ -75,7 +75,7 @@
 <body>
     <div class="center-container"> <!-- HEADER -->
         <div class="header">
-            <img src='{{link}}/files/logo.png' alt="PWIT Logo" style="width: 150px; height: auto;" />
+            <img src='https://res.cloudinary.com/dkb3hvxhf/image/upload/v1734498439/logo_uywexq.png' alt="PWIT Logo" style="width: 150px; height: auto;" />
             <div
                 style="font-size: 14px; font-weight: 500; line-height: 15px; color:#002C77;font-weight:600;padding-top:7px">
                 Assistive Funder Toolkit</div>
