--- a/pwit/templates/pages/welcome_email_template.html
+++ b/pwit/templates/pages/welcome_email_template.html
@@ -119,23 +119,23 @@
                     <div style="text-align: center; margin-bottom: 10px;">
                         <a href="https://www.youtube.com/user/TheBridgespanGroup" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/yt.svg' alt="YouTube" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='https://res.cloudinary.com/dkb3hvxhf/image/upload/v1734498705/yt_mwon9o.svg' alt="YouTube" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                         <a href="https://www.facebook.com/BridgespanGroup/" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/fb.svg' alt="Facebook" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='https://res.cloudinary.com/dkb3hvxhf/image/upload/v1734499032/fb_xpkljc.svg' alt="Facebook" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                         <a href="https://twitter.com/BridgespanGroup" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/tw.svg' alt="Twitter" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='https://res.cloudinary.com/dkb3hvxhf/image/upload/v1734499509/mdi--twitter_v0cpaz.svg' alt="Twitter" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                         <a href="https://www.instagram.com/thebridgespangroup/" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/ins.svg' alt="Instagram" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='https://res.cloudinary.com/dkb3hvxhf/image/upload/v1734499072/ins_uif3vz.svg' alt="Instagram" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                         <a href="https://www.linkedin.com/company/the-bridgespan-group" target="_blank"
                             style="text-decoration: none; margin: 0 8px;">
-                            <img src='{{link}}/files/li.svg' alt="LinkedIn" style="width: 24px; height: 24px; vertical-align: middle;" />
+                            <img src='https://res.cloudinary.com/dkb3hvxhf/image/upload/v1734499093/li_hre9hx.svg' alt="LinkedIn" style="width: 24px; height: 24px; vertical-align: middle;" />
                         </a>
                     </div>
 
