--- a/pwit/templates/pages/welcome_email_template.html
+++ b/pwit/templates/pages/welcome_email_template.html
@@ -127,10 +127,10 @@
                     Toolkit provides concrete steps and recommendations for making your work more supportive of
                     nonprofits and more likely to achieve your intended impact.</p>
                 <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">Here’s what you can do next:</p>
-                <ol>
-                    <p style="font-size: 14px;">1. Explore the toolkit to assess your current grantmaking practices.</p style="font-size: 14px;">
-                    <p style="font-size: 14px;">2. Explore the toolkit to assess your current grantmaking practices.</p style="font-size: 14px;">
-                    <p style="font-size: 14px;">3. Explore the toolkit to assess your current grantmaking practices.</p style="font-size: 14px;">
+                <ol style="padding-left: 7px;">
+                    <p style="font-size: 14px;">1. Explore the toolkit to assess your current grantmaking practices.</p>
+                    <p style="font-size: 14px;">2. Receive guidance and recommendations to further enhance your grantmaking practices.</p>
+                    <p style="font-size: 14px;">3. Start implementing meaningful changes to have greater impact through your grantmaking.</p>
                 </ol>
                 <p style="padding-top: 40px;font-size: 14px;">
                     If you have any questions or need assistance, don’t hesitate to reach out—we’re here to support you every step of the way!
@@ -179,7 +179,7 @@
 
                     <!-- Copyright Text -->
                     <p style="font-size: 12px; color: #555;">
-                        &copy; 2023 The Bridgespan Group. All rights reserved.
+                        &copy; 2024 The Bridgespan Group. All rights reserved.
                     </p>
                 </td>
             </tr>
