feedback point cover

--- a/pwit/templates/pages/forget_email_template.html
+++ b/pwit/templates/pages/forget_email_template.html
@@ -116,7 +116,7 @@
                 </div>
             </div> <!-- Body -->
             <div style="padding: 20px;">
-                <p style="text-align: start; font-size: 14px; font-weight: 400;">Hi {{doc.full_name}}</p>
+                <p style="text-align: start; font-size: 14px; font-weight: 400;">Hi {{doc.full_name}},</p>
                 <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">We received a
                     request to reset your password. Don’t worry, we’ve got you covered! Click the button below to set a
                     new password for your account.</p>
@@ -127,7 +127,7 @@
                     the way!</p>
                 <div style="text-align: start; padding-top: 14px; font-size: 14px;">
                     <p>Thank you,</p>
-                    <p>PWIT Team</p>
+                    <p>The Pay-What-It-Takes India Team</p>
                 </div>
             </div>
         </div> <!-- FOOTER -->
