--- a/pwit/templates/pages/verify_email.html
+++ b/pwit/templates/pages/verify_email.html
@@ -118,7 +118,7 @@
                 </div> <!-- Body -->
             </div>
             <div style="padding: 20px;">
-                <p style="text-align: start; font-size: 14px; font-weight: 400;">Hi {{doc.full_name}}</p>
+                <p style="text-align: start; font-size: 14px; font-weight: 400;">Hi {{doc.full_name}},</p>
                 <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">You’re almost ready
                     to get started!
                     Please click the button below to verify your email address and complete your registration.</p>
@@ -126,7 +126,7 @@
                     </a> </div>
                 <div style="text-align: start; padding-top: 14px; font-size: 14px;">
                     <p>Thank you,</p>
-                    <p>PWIT Team</p>
+                    <p>The Pay-What-It-Takes India Team</p>
                 </div>
             </div>
         </div> <!-- FOOTER -->
