--- a/pwit/templates/pages/welcome_email_template.html
+++ b/pwit/templates/pages/welcome_email_template.html
@@ -128,18 +128,18 @@
                     nonprofits and more likely to achieve your intended impact.</p>
                 <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">Here’s what you can do next:</p>
                 <ol style="padding-left: 7px;">
-                    <p style="font-size: 14px;">1. Explore the toolkit to assess your current grantmaking practices.</p>
-                    <p style="font-size: 14px;">2. Receive guidance and recommendations to further enhance your grantmaking practices.</p>
-                    <p style="font-size: 14px;">3. Start implementing meaningful changes to have greater impact through your grantmaking.</p>
+                    <p style="font-size: 14px; text-align: start;">1. Explore the toolkit to assess your current grantmaking practices.</p>
+                    <p style="font-size: 14px; text-align: start;">2. Receive guidance and recommendations to further enhance your grantmaking practices.</p>
+                    <p style="font-size: 14px; text-align: start;">3. Start implementing meaningful changes to have greater impact through your grantmaking.</p>
                 </ol>
-                <p style="padding-top: 40px;font-size: 14px;">
+                <p style="padding-top: 40px;font-size: 14px; text-align: start;">
                     If you have any questions or need assistance, don’t hesitate to reach out—we’re here to support you every step of the way!
                 </p>
                 <div class="button-container"> <a href={{verification_link}} class="verify-button"> Get Started
                     </a> </div>
                 <div style="text-align: start; padding-top: 14px; font-size: 14px;">
                     <p>Thank you,</p>
-                    <p>PWIT Team</p>
+                    <p>The Pay-What-It-Takes India Team</p>
                 </div>
             </div>
         </div> <!-- FOOTER -->
