new line add in home page

--- a/pwit/templates/pages/welcome_email_template.html
+++ b/pwit/templates/pages/welcome_email_template.html
@@ -121,22 +121,22 @@
                 <p style="text-align: start; font-size: 14px; font-weight: 400;">Welcome aboard! 🎉 </p>
                 <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">We’re excited to
                     have you join the Assistive Funder Toolkit community.</p>
-                <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">The Toolkit is here
+                <p style="text-align: start; padding-top: 16px; font-size: 14px; font-weight: 400;">The Toolkit is here
                     to help you assess your practices against the five Pay-What-It-Takes (PWIT) principles and uncover
                     actionable strategies for further enhancement. Wherever you may be on your grantmaking journey, this
                     Toolkit provides concrete steps and recommendations for making your work more supportive of
                     nonprofits and more likely to achieve your intended impact.</p>
-                <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">Here’s what you can do next:</p>
-                <ol style="padding-left: 7px;">
-                    <p style="font-size: 14px; text-align: start;">1. Explore the toolkit to assess your current grantmaking practices.</p>
-                    <p style="font-size: 14px; text-align: start;">2. Receive guidance and recommendations to further enhance your grantmaking practices.</p>
-                    <p style="font-size: 14px; text-align: start;">3. Start implementing meaningful changes to have greater impact through your grantmaking.</p>
+                <p style="text-align: start; padding-top: 16px; font-size: 14px; font-weight: 400;">Here’s what you can do next:</p>
+                <ol style="padding-left: 20px;padding-top:5px">
+                    <li style="font-size: 14px; text-align: start;">Explore the toolkit to assess your current grantmaking practices.</li>
+                    <li style="font-size: 14px; text-align: start;">Receive guidance and recommendations to further enhance your grantmaking practices.</li>
+                    <li style="font-size: 14px; text-align: start;">Start implementing meaningful changes to have greater impact through your grantmaking.</li>
                 </ol>
-                <p style="padding-top: 40px;font-size: 14px; text-align: start;">
+                <div class="button-container"> <a href={{verification_link}} class="verify-button"> Get Started
+                </a> </div>
+                <p style="padding-top: 15px;font-size: 14px; text-align: start;">
                     If you have any questions or need assistance, don’t hesitate to reach out—we’re here to support you every step of the way!
                 </p>
-                <div class="button-container"> <a href={{verification_link}} class="verify-button"> Get Started
-                    </a> </div>
                 <div style="text-align: start; padding-top: 14px; font-size: 14px;">
                     <p>Thank you,</p>
                     <p>The Pay-What-It-Takes India Team</p>
