--- a/pwit/templates/pages/forget_email_template.html
+++ b/pwit/templates/pages/forget_email_template.html
@@ -117,9 +117,7 @@
             </div> <!-- Body -->
             <div style="padding: 20px;">
                 <p style="text-align: start; font-size: 14px; font-weight: 400;">Hi {{doc.full_name}},</p>
-                <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">We received a
-                    request to reset your password. Don’t worry, we’ve got you covered! Click the button below to set a
-                    new password for your account.</p>
+                <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">We received a request to reset your password. Don’t worry, we’ve got you covered! Click the button below to set a new password for your account.We received a request to reset your password. Don’t worry, we’ve got you covered! Click the button below to set a new password for your account.</p>
                 <div class="button-container"> <a href={{verification_link}} class="verify-button"> Reset Password
                     </a> </div>
                 <p style="text-align: start; padding-top: 10px; font-size: 14px; font-weight: 400;">If you have any
