add to new change

--- a/pwit/templates/pages/verify_email.html
+++ b/pwit/templates/pages/verify_email.html
@@ -113,7 +113,7 @@
                             <img style="width: 30px;"
                                 src="https://res.cloudinary.com/dkb3hvxhf/image/upload/v1734501961/material-symbols--mail_fyfsli.png" />
                         </div>
-                        <p style="color: white; font-size: 22px;">Verify Your E-mail Address</p>
+                        <p style="color: white; font-size: 22px;">Verify your e-mail address</p>
                     </div>
                 </div> <!-- Body -->
             </div>
