redirection correct in email

--- a/pwit/templates/pages/welcome_email_template.html
+++ b/pwit/templates/pages/welcome_email_template.html
@@ -113,7 +113,7 @@
                     <li style="font-size: 14px; text-align: start;">Receive guidance and recommendations to further enhance your grantmaking practices.</li>
                     <li style="font-size: 14px; text-align: start;">Start implementing meaningful changes to have greater impact through your grantmaking.</li>
                 </ol>
-                <div class="button-container"> <a href={{verification_link}} class="verify-button"> Get Started
+                <div class="button-container"> <a href={{url}} class="verify-button"> Get Started
                 </a> </div>
                 <p style="padding-top: 12px;font-size: 14px; text-align: start;">
                     If you have any questions or need assistance, don’t hesitate to reach out—we’re here to support you every step of the way!
