--- a/pwit/templates/pages/Result.html
+++ b/pwit/templates/pages/Result.html
@@ -133,7 +133,7 @@
         <!-- Recommended Actions Section -->
         <div style="width: 100%; margin: auto; padding-top: 25px;">
             <p style="color: #002C77;font-size: 16px;font-weight: 700;font-family: serif;">
-                Recommended Actions
+                Recommended actions
             </p>
             {% if doc.details.recommended_actions %}
             {% for items in doc.details.recommended_actions %}
@@ -149,7 +149,7 @@
         <!--  -->
         <div style="padding-top: 15px;">
             <p style="padding-top: 18px; font-size: 16px;color: #002C77;font-family: serif;font-weight: 700;">
-                Useful Resources
+                Useful resources
             </p>
             <ul style="padding: 5px 10px;">
                 {% for resource in doc.details.useful_resources %}
