add subject in contact us

--- a/pwit/templates/pages/contact.html
+++ b/pwit/templates/pages/contact.html
@@ -87,9 +87,9 @@
             </div>
              <!-- Body -->
             <div style="padding: 20px;">
-                <p style="text-align: start; font-size: 14px; font-weight: 400;line-height: 0;">Someone submitted their message via Contact Us form. 
+                <p style="text-align: start; font-size: 14px; font-weight: 400;line-height: 16px;">Someone submitted their message via the contact us form on the Assistive Funder Toolkit 
                      </p>
-                <p style="text-align: start; font-size: 14px; font-weight: 400;line-height: 0;">Please find the details below :
+                <p style="text-align: start; font-size: 14px; font-weight: 400;line-height: 14px;">Please find the details below :
                      </p>
                 <table style="width:100%; border: 1px solid black; border-collapse: collapse;" >
                     <thead style="font-size: 14px;">
